# Video-Geometriser

./: Cargo.toml  README.md
src/: atlas.rs  main.rs  myimage.rs  object.rs
src/video/result/: coin_coin.txt  ficelo.txt  ng.txt
