[package]
name = "video_geometriser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
num-integer = "0.1.45"
rand = "0.8.*"
rayon = "1.7.*"

[profile.release]
panic = "abort"
# optimize for speed
opt-level = "z"
lto = true
codegen-units = 1
strip = true

